--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ build_flags =
   ; Don't use lv_conf.h. Tweak params via platfom.ini.
   -D LV_CONF_SKIP
   ; Add more defines below to overide lvgl:/src/lv_conf_simple.h
-  -D LV_FONT_MONTSERRAT_8
+  -D LV_FONT_MONTSERRAT_18
 
   ; pins
   -D CONFIG_TFT_MISO=-1
@@ -37,6 +37,8 @@ build_flags =
   -D CONFIG_TFT_ST7789_DRIVER=1
   -D CONFIG_TFT_SPI_FREQUENCY=20000000
   -D CONFIG_TFT_SPI_READ_FREQ=10000000
+  -D TFT_WIDTH=240
+  -D TFT_HEIGHT=240
 
 lib_deps =
   ; Use direct URL, because package registry is unstable
