--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,9 @@ build_flags =
   -D LV_CONF_SKIP
   ; Add more defines below to overide lvgl:/src/lv_conf_simple.h
   -D LV_FONT_MONTSERRAT_18
+  -D CONFIG_LV_TICK_CUSTOM=1
+  -D CONFIG_LV_TICK_CUSTOM_INCLUDE="<esp_timer.h>"
+  -D CONFIG_LV_TICK_CUSTOM_SYS_TIME_EXPR="((esp_timer_get_time() / 1000LL))"
 
   ; pins
   -D CONFIG_TFT_MISO=-1
