--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -297,6 +297,7 @@
     "istream": "cpp",
     "ostream": "cpp",
     "cstdlib": "cpp",
-    "new": "cpp"
+    "new": "cpp",
+    "functional": "cpp"
   }
 }
