feat wifi config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -298,6 +298,8 @@
     "ostream": "cpp",
     "cstdlib": "cpp",
     "new": "cpp",
-    "functional": "cpp"
+    "functional": "cpp",
+    "fstream": "cpp",
+    "sstream": "cpp"
   }
 }
