--- a/platformio.ini
+++ b/platformio.ini
@@ -46,5 +46,7 @@ build_flags =
 lib_deps =
   ; Use direct URL, because package registry is unstable
   lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.3.10.zip
+  https://github.com/me-no-dev/ESPAsyncWebServer.git
   bodmer/TFT_eSPI@^2.5.0
+  ; bblanchon/ArduinoJson@^6.21.0
 lib_archive = false
