feat wifi config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -300,6 +300,7 @@
     "new": "cpp",
     "functional": "cpp",
     "fstream": "cpp",
-    "sstream": "cpp"
+    "sstream": "cpp",
+    "regex": "cpp"
   }
 }
