--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ build_flags =
   -D LV_CONF_SKIP
   ; Add more defines below to overide lvgl:/src/lv_conf_simple.h
   -D LV_FONT_MONTSERRAT_18
+  -D LV_FONT_MONTSERRAT_16
   -D CONFIG_LV_TICK_CUSTOM=1
   -D CONFIG_LV_TICK_CUSTOM_INCLUDE="<esp_timer.h>"
   -D CONFIG_LV_TICK_CUSTOM_SYS_TIME_EXPR="((esp_timer_get_time() / 1000LL))"
@@ -41,12 +42,13 @@ build_flags =
   -D CONFIG_TFT_SPI_FREQUENCY=20000000
   -D CONFIG_TFT_SPI_READ_FREQ=10000000
   -D TFT_WIDTH=240
-  -D TFT_HEIGHT=240
+  -D TFT_HEIGHT=320
 
 lib_deps =
   ; Use direct URL, because package registry is unstable
   lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.3.10.zip
   https://github.com/me-no-dev/ESPAsyncWebServer.git
+  https://github.com/adafruit/Adafruit-BMP085-Library
   bodmer/TFT_eSPI@^2.5.0
   ; bblanchon/ArduinoJson@^6.21.0
 lib_archive = false
