--- a/platformio.ini
+++ b/platformio.ini
@@ -32,7 +32,7 @@ build_flags =
   ; Chip select control pin
   -D CONFIG_TFT_CS=5
   ; Data Command control pin
-  -D CONFIG_TFT_DC=27
+  -D CONFIG_TFT_DC=14
   ; Reset pin (could connect to RST pin)
   -D CONFIG_TFT_RST=26
   -D TFT_BL=22
@@ -49,6 +49,8 @@ lib_deps =
   lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.3.10.zip
   https://github.com/me-no-dev/ESPAsyncWebServer.git
   https://github.com/adafruit/Adafruit-BMP085-Library
+  https://github.com/adafruit/Adafruit_ADXL345
+  WebSockets@^2.4.0
   bodmer/TFT_eSPI@^2.5.0
   ; bblanchon/ArduinoJson@^6.21.0
 lib_archive = false
