feat NOTIFY_PIN

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -305,6 +305,9 @@
     "ui.h": "c",
     "ctime": "cpp",
     "arduino.h": "c",
-    "pgmspace.h": "c"
+    "pgmspace.h": "c",
+    "bitset": "cpp",
+    "optional": "cpp",
+    "streambuf": "cpp"
   }
 }
