fix time show error

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -308,6 +308,7 @@
     "pgmspace.h": "c",
     "bitset": "cpp",
     "optional": "cpp",
-    "streambuf": "cpp"
+    "streambuf": "cpp",
+    "cmath": "cpp"
   }
 }
