--- a/.github/workflows/releaser_server.yml
+++ b/.github/workflows/releaser_server.yml
@@ -13,6 +13,10 @@ env:
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}_server
 
+defaults:
+  run:
+    working-directory: ./server
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -69,7 +73,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
-          file: ./server/Dockerfile
+          file: ./Dockerfile
           # linux/386,linux/amd64,linux/arm/v7,linux/arm64/v8
           platforms: linux/amd64
 
