--- a/.github/workflows/releaser_server.yml
+++ b/.github/workflows/releaser_server.yml
@@ -67,6 +67,7 @@ jobs:
 
       - uses: docker/build-push-action@v4
         with:
+          context: ./server
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
