--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,11 +6,18 @@ RUN apk add --no-cache --update nodejs yarn
 COPY package.json .
 RUN yarn install --prod
 
-FROM alpine:latest
+FROM alpine:latest AS docs
 
 WORKDIR /app
 COPY --from=builder /app .
-COPY . .
+RUN yarn install
 RUN yarn swagger
+
+FROM alpine:latest
+
+WORKDIR /app
+COPY --from=docs /app/swagger-output.json .
+COPY --from=builder /app .
+COPY . .
 
 CMD ["yarn", "start"]
