--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -38,7 +38,7 @@ jobs:
         run: yarn install
 
       - name: Build
-        run: yarn build
+        run: yarn generate
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
