--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "nuxt": "^3.7.4",
+    "nuxt-icon": "^0.5.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
