--- a/.github/workflows/releaser_server.yml
+++ b/.github/workflows/releaser_server.yml
@@ -80,6 +80,7 @@ jobs:
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
   swagger:
+    runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./server
