--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
-    "sass": "^1.69.1"
+    "chart.js": "^4.4.0",
+    "sass": "^1.69.1",
+    "vue-chartjs": "^5.2.0"
   }
 }
