--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "ws": "^8.14.2"
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.3",
@@ -29,7 +28,6 @@
     "@types/morgan": "^1.9.6",
     "@types/node": "^20.8.3",
     "@types/swagger-ui-express": "^4.1.4",
-    "@types/ws": "^8.5.7",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "app-root-path": "^3.1.0",
