--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -8,6 +8,7 @@ on:
 
 env:
   NUXT_APP_BASE_URL: '/Elder-Care-App'
+  NUXT_PUBLIC_API_URL: ${{ github.NUXT_PUBLIC_API_URL }}
 
 permissions:
   contents: read
