--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.3",
@@ -37,7 +38,6 @@
     "prettier": "^3.0.3",
     "swagger-autogen": "^2.23.6",
     "swagger-ui-express": "^5.0.0",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
   "nodemonConfig": {
