--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -18,8 +18,5 @@
     "types": ["body-parser"]
   },
   "include": ["src/**/*.ts", "scripts/**/*.ts"],
-  "exclude": ["node_modules"],
-  "ts-node": {
-    "require": ["tsconfig-paths/register"]
-  }
+  "exclude": ["node_modules"]
 }
