--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0"
@@ -25,6 +26,7 @@
     "@types/body-parser": "^1.19.3",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/morgan": "^1.9.7",
     "@types/node": "^20.8.3",
     "@types/swagger-ui-express": "^4.1.4",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
