--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "swagger": "ts-node scripts/swagger.ts"
   },
   "dependencies": {
+    "blurhash": "^2.0.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -20,7 +21,9 @@
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "sharp": "^0.32.6",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0"
   },
@@ -30,6 +33,7 @@
     "@types/express": "^4.17.18",
     "@types/mongodb": "^4.0.7",
     "@types/morgan": "^1.9.7",
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.8.3",
     "@types/swagger-ui-express": "^4.1.4",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
