--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,5 +7,11 @@ COPY . .
 RUN yarn install
 RUN yarn build
 
+FROM node:18
+
+WORKDIR /app
+COPY --from=builder /app/.output .
+COPY --from=builder /app/.nuxt .
+
 EXPOSE 3000
 CMD ["node", ".output/server/index.mjs"]
