--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,7 +11,6 @@ FROM node:18
 
 WORKDIR /app
 COPY --from=builder /app/.output .
-COPY --from=builder /app/.nuxt .
 
 EXPOSE 3000
-CMD ["node", ".output/server/index.mjs"]
+CMD ["node", "./server/index.mjs"]
