--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.3",
@@ -32,6 +33,7 @@
     "@types/multer": "^1.4.9",
     "@types/node": "^20.8.3",
     "@types/swagger-ui-express": "^4.1.4",
+    "@types/ws": "^8.5.8",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "app-root-path": "^3.1.0",
