--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,35 +7,37 @@ version: '3.1'
 
 services:
   mongo:
-    image: mongo
+    image: mongo:4
     restart: always
+    ports:
+      - 27017:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${DB_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${DB_USER_PASSWORD}
 
-  app-server:
+  elder-care-app-server:
     image: ghcr.io/a3510377/elder-care-app_server:latest
     restart: always
-    ports:
-      - 8000:8000
+    expose:
+      - 8000
     environment:
       ALLOWED_ORIGINS: ${FRONTEND_PUBLIC_URL}
       DB_CONN_STRING: mongodb://mongo:27017
       DATABASE_USERNAME: ${DB_USERNAME}
       DATABASE_PASSWORD: ${DB_USER_PASSWORD}
 
-  app-frontend:
-    image: ghcr.io/a3510377/elder-care-app_frontend:latest
-    restart: always
-    ports:
-      - 80:3000
-    environment:
-      NUXT_PUBLIC_API_URL: ${SERVER_PUBLIC_URL}
+  # app-frontend:
+  #   image: ghcr.io/a3510377/elder-care-app_frontend:latest
+  #   restart: always
+  #   ports:
+  #     - 80:3000
+  #   environment:
+  #     NUXT_PUBLIC_API_URL: ${SERVER_PUBLIC_URL}
 
   mongo-express:
     image: mongo-express
     restart: always
-    ports:
-      - 8081:8081
+    expose:
+      - 8081
     environment:
       ME_CONFIG_MONGODB_URL: mongodb://${DB_USERNAME}:${DB_USER_PASSWORD}@mongo:27017
